Several changes to ModelMaker gui.
(*) Changed how program exits, from call System.exit to returning
from IPlatformRunnable.run(Object)

(*) Register new instances of ModelMaker with the global InstanceRegistry